--- a/Views/Shared/Components/Footer/Default.cshtml
+++ b/Views/Shared/Components/Footer/Default.cshtml
@@ -1,5 +1,7 @@
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2024 - Compute Zone - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<footer class="footer text-muted"  style="margin-top: 20px;">
+    <div class="container" style="margin-top: 20px;">
+        <p>&copy; 2024 - Compute Zone - <a asp-area="" asp-controller="Home" asp-action="About">About</a></p>
+        <p><strong>Hotline: </strong>+84 987654321</p>
+        <p><strong>Email: </strong>computerzone@gmail.com</p>
     </div>
 </footer>
