--- a/Views/Shared/_Layout_User.cshtml
+++ b/Views/Shared/_Layout_User.cshtml
@@ -45,10 +45,9 @@
             </ul>
         }
     </div>
-        <main role="main" class="pb-3">
+        <main role="main" >
             @RenderBody()
         </main>        
-
     @(await Component.InvokeAsync("Footer"))
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
