--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,8 +16,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
-  background-color: #b2bec3;
+  background-color: #ecf0f1;
 }
 
 
@@ -441,8 +440,10 @@ body {
 
 .hot-new-image {
   padding: 20px 20px;
-  width: 70%;
-  height: 70%;
+  /* width: 70%;
+  height: 70%; */
+  width: 300px;
+  height: 250px;
   object-fit: cover;
   border-radius: 30px;
 }
