--- a/wwwroot/css/theme.css
+++ b/wwwroot/css/theme.css
@@ -40,9 +40,8 @@ a.navbar-brand {
   }
   
   .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px;
   }
