--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -5,6 +5,7 @@
 <div class="login-container">
     <h1>Đăng nhập</h1>
     <form asp-action="Login">
+         <input type="hidden" name="ReturnUrl" value="@ViewData["ReturnUrl"]" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label asp-for="UserName" class="control-label">Tên đăng nhập</label>
@@ -21,7 +22,7 @@
         </div>
     </form>
     <div class="register-link text-center">
-        <p>Bạn chưa có tài khoản? <a asp-controller="Home" asp-action="Register">Đăng ký ngay</a></p>
+        <p>Bạn chưa có tài khoản? <a asp-controller="Account" asp-action="Register">Đăng ký ngay</a></p>
         
     </div>
 </div>
