--- a/Views/Shared/Components/Navbar/Index.cshtml
+++ b/Views/Shared/Components/Navbar/Index.cshtml
@@ -26,7 +26,7 @@
                 @if (string.IsNullOrEmpty(ViewData["UserName"] as string))
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                     </li>
                 }
                 else
@@ -37,7 +37,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                             <li><a class="dropdown-item" href="#">@ViewData["UserName"]</a></li>
-                            <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
                         </ul>
                     </li>
                 }
