--- a/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/Views/Shared/Components/Sidebar/Default.cshtml
@@ -14,19 +14,19 @@
                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
                     aria-expanded="false" aria-controls="collapsePages">
                     <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                    Pages
+                    User
                     <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                 </a>
                 <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                     <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                        <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne"
-                            data-bs-parent="#sidenavAccordionPages">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="login.html">Login</a>
-                                <a class="nav-link" href="register.html">Register</a>
-                                <a class="nav-link" href="password.html">Forgot Password</a>
-                            </nav>
-                        </div>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fas fa-user-tag"></i></div>
+                            Manage Roles
+                        </a>
+                        <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="UserList">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                            User List
+                        </a>
                     </nav>
                 </div>
             </div>
