--- a/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/Views/Shared/Components/Sidebar/Default.cshtml
@@ -29,6 +29,10 @@
                         </a>
                     </nav>
                 </div>
+                 <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-circle-info"></i></div>
+                    Category
+                </a>
             </div>
         </div>
         <div class="sb-sidenav-footer">
