--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-dark" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Hello, @ViewData["UserName"]
+                Hello, @UserManager.GetUserName(User)
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                 <li><a id="manage" class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index"
