--- a/Views/Cart/Checkout.cshtml
+++ b/Views/Cart/Checkout.cshtml
@@ -26,13 +26,14 @@
                     <tr>
                         <td>@item.Product.Title</td>
                         <td>@item.Quantity</td>
-                        <td>@string.Format("{0:C}", item.Product.Price)</td>
+                        <td>@item.Product.FormattedPrice</td>
                     </tr>
                 }
             </tbody>
         </table>
-        <div class="text-right">
-            <p><strong>Tổng tiền: @string.Format("{0:C}", totalPrice)</strong></p>
+        <div class="text-right">  
+            <p><strong>Tổng tiền: @string.Format("{0:N0}", totalPrice) VND</strong></p>
+            <input type="hidden" name="TotalPrice" value="@totalPrice" />
         </div>
     }
 
@@ -56,16 +57,16 @@
             <label>Phương thức thanh toán</label>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="PaymentMethod" id="Banking" value="Banking" required />
-                <label class="form-check-label" for="Banking">Banking</label>
+                <label class="form-check-label" for="Banking">Payment</label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="PaymentMethod" id="COD" value="COD" required />
                 <label class="form-check-label" for="COD">Thanh toán khi nhận hàng</label>
             </div>
-            <div class="form-check">
+             @* <div class="form-check">
                 <input class="form-check-input" type="radio" name="PaymentMethod" id="EWallet" value="EWallet" required />
                 <label class="form-check-label" for="EWallet">Ví điện tử</label>
-            </div>
+            </div> *@
         </div>
 
         <button type="submit" class="btn btn-primary">Xác nhận thanh toán</button>
