--- a/Views/Cart/Confirmation.cshtml
+++ b/Views/Cart/Confirmation.cshtml
@@ -1,6 +1,6 @@
 @model MvcLaptop.Models.Order
 
-<h1>Xác nhận thanh toán</h1>
+@* <h1>Xác nhận thanh toán</h1>
 
 @if (Model != null)
 {
@@ -15,4 +15,10 @@ else
     <p>Không tìm thấy đơn hàng.</p>
 }
 
-<a href="/" class="btn btn-primary">Quay lại trang chủ</a>
+<a href="/" class="btn btn-primary">Quay lại trang chủ</a> *@
+@{
+    ViewData["Title"] = "Xác nhận Thanh toán";
+}
+<h2>Xác nhận Thanh toán</h2>
+<p>@ViewData["Message"]</p>
+<a href="@Url.Action("Index", "Home")">Quay lại Trang Chủ</a>
