--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -12,7 +12,7 @@
             @if (TempData["ShowLoginModal"] != null && (bool)TempData["ShowLoginModal"]!)
             {
                 <br />
-                <a asp-action="Login" asp-controller="Home" class="btn btn-primary mt-2">Đăng nhập ngay</a>
+                <a asp-area="Identity" asp-page="/Account/Login" class="btn btn-primary mt-2">Đăng nhập ngay</a>
             }
         </div>
     }
@@ -95,7 +95,7 @@
                         <p>Bạn cần đăng nhập để tiếp tục đặt hàng.</p>
                     </div>
                     <div class="modal-footer">
-                        <a asp-action="Login" asp-controller="Account" class="btn btn-primary">Đăng nhập</a>
+                        <a area="Identity" asp-page="/Account/Login" class="btn btn-primary">Đăng nhập</a>
                         <button type="button" class="btn btn-secondary" onclick="closeModal()">Hủy</button>
                     </div>
                 </div>
