--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -440,10 +440,10 @@ body {
 
 .hot-new-image {
   padding: 20px 20px;
-  /* width: 70%;
-  height: 70%; */
-  width: 300px;
-  height: 250px;
+  width: 70%;
+  height: 70%;
+  /* width: 300px; */
+  /* height: 250px; */
   object-fit: cover;
   border-radius: 30px;
 }
