--- a/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/Views/Shared/Components/Sidebar/Default.cshtml
@@ -33,6 +33,11 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-circle-info"></i></div>
                     Category
                 </a>
+                <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-circle-info"></i></div>
+                    Order
+                </a>
+
             </div>
         </div>
         <div class="sb-sidenav-footer">
