--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,11 +13,18 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                 <li><a id="manage" class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index"
-                title="Manage">Hello @UserManager.GetUserName(User)!</a></li>
-                <li><form id="logoutForm" class="dropdown-item form-inline" asp-area="Identity" asp-page="/Account/Logout"
-                asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-            </form></li>
+                        title="Manage">Hello @UserManager.GetUserName(User)!</a></li>
+                <li>
+                    <form class="dropdown-item form-inline" asp-controller="UserOrder" asp-action="Index">
+                        <button class="nav-link btn btn-link text-dark border-0" type="submit">Order</button>
+                    </form>
+                </li>
+                <li>
+                    <form id="logoutForm" class="dropdown-item form-inline" asp-area="Identity" asp-page="/Account/Logout"
+                        asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
+                    </form>
+                </li>
             </ul>
         </li>
     }
