--- a/Views/UserOrder/Details.cshtml
+++ b/Views/UserOrder/Details.cshtml
@@ -42,4 +42,7 @@
             </table>
         </div>
     </div>
+    <div class="mt-3">
+        <a href="@Url.Action("Index", "UserOrder")" class="btn btn-primary">Trở lại</a>
+    </div>
 </div>
